--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello I'm Miraz</title></title>
+  <title>Hello I'm Miraz wishing you to happy new year </title></title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pinyon+Script&display=swap');
 
@@ -84,20 +84,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>I <span>Love</span> You</h1>
+    <h1>Happy<span>New</span> Years 2025</h1>
 
     <div class="love-letter">
-      <p>প্রিয়তম,</p>
-      <p> মনে হলো, তোমার জন্য কিছু লিখে তোমার কাছে আমার অনুভূতিগুলো পৌঁছে দিই। প্রতিটি দিন তোমার সাথে কাটানোর পর, আমি বুঝতে পারি, তুমি আমার জীবনের সবচেয়ে বিশেষ অংশ। তোমার হাসি, তোমার কথা, তোমার ছোঁয়া—সবকিছুই যেন আমার পৃথিবীকে আলোকিত করে। আমি জানি না কীভাবে তোমাকে ধন্যবাদ জানাবো, কারণ তুমি আমার জীবনে এসে এক অমূল্য উপহার হয়ে গেছো।</p>
-
-<p>তোমার সাথে কাটানো প্রতিটি মুহূর্ত আমার জন্য সোনালী হয়ে উঠেছে। তোমার পাশে থাকলে পৃথিবীটা কেমন যেন সুন্দর হয়ে ওঠে। তোমার চোখের দৃষ্টি, তোমার কথা বলার ভঙ্গি, তোমার উপস্থিতি—সবকিছুই আমাকে এক অন্যরকম শান্তি দেয়। আমি প্রতিদিন এই মুহূর্তগুলোকে আরও গভীরভাবে অনুভব করতে চাই। তুমি আমার জীবনে আসার পর, আমি বুঝেছি যে, সত্যিকারের ভালোবাসা কী।</p>
-
-<p>প্রিয়, তোমার পাশে থাকলে আমি নিজেকে পরিপূর্ণ মনে করি। আমি তোমাকে প্রতিশ্রুতি দিতে চাই—তোমার পাশে, তোমার পাশে, আমি সবসময় থাকবো। তোমার সুখে, তোমার দুঃখে, আমি তোমার সঙ্গে এই পথটা চলতে চাই। তুমি যদি কখনো কষ্ট পাও, আমি তোমার পাশে দাঁড়িয়ে সেই কষ্ট শেয়ার করতে চাই। আমরা একসঙ্গে একে অপরকে শক্তি দেবো, এবং একে অপরের জন্য ভালোবাসা আর সুখের পথ তৈরি করবো।</p>
-
-<p>তোমাকে ভালোবাসা আমার জীবনের সবচেয়ে সুন্দর অনুভূতি, আর আমি প্রতিদিন তোমার ভালোবাসায় সিক্ত হতে চাই।
-
-।</p>
-      <p>তোমার জন্য আমার ভালোবাসা অসীম ,</p>
+      <p>
+"New year, new goals, new energy! The opportunities that 2025 has brought, we will seize and push beyond our limits. Let’s show the world our strength and courage this year!"
+,</p>
+     
       <p><strong>Miraz</strong></p>
     </div>
 
